--- a/index.html
+++ b/index.html
@@ -779,16 +779,12 @@ class: center, middle
 
 ---
 
-class: center, middle
-
 # Thanks
 
 https://github.com/keathley/webpack-react-skeleton
+http://keathley.io/component_design/
 
-- git-repo
-- slides
-
-## @ChrisKeathley / keathley@carbonfive.com / keathley.io
+### @ChrisKeathley / keathley@carbonfive.com / keathley.io
 
 
 
